--- a/nuget.config
+++ b/nuget.config
@@ -9,7 +9,7 @@
 	<packageSourceCredentials>
 		<github>
 			<add key="Username" value="gwynnPalmer"/>
-			<add key="ClearTextPassword" value="%JGP.GitHub.ApiKey%"/>
+			<add key="ClearTextPassword" value="%JGP_GITHUB_APIKEY%"/>
 		</github>
 	</packageSourceCredentials>
 </configuration>
