updated nugets and tweaked api key config

--- a/JGP.Logging.Api/appsettings.json
+++ b/JGP.Logging.Api/appsettings.json
@@ -17,7 +17,8 @@
   },
   "JGPKeyAuth": {
     "ServiceId": "f2e5adc0-9055-4557-ad47-6e397d31506b",
-    "ServiceName": "Logging"
+    "ServiceName": "Logging",
+    "Url": "https://dev-api-logging.jgp.dev/"
   },
   "ConnectionStrings": {
     "LogContext": "Server=.;Database=jgp-logging;Persist Security Info=True;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;Application Name=Logging Service",
